--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,26 @@
-.app-container{
-  width: 100%;
-  height: 100%;
+.app-container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.content-container {
+	width: 100%;
+	height: 100%;
+}
+
+.btn {
+	background: var(--main-purple);
+	color: var(--white);
+	border-radius: 24px;
+	padding: 10px 18px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+}
+
+.btn:hover {
+	background: var(--purple-hover);
 }
