--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,22 +1,21 @@
 .header-container {
-	position: fixed;
-	right: 0;
-	left: 0;
 	z-index: 1;
 	width: 100%;
-	height: 9.5%;
+	height: 5rem;
 }
 
 header {
+    height: 100%;
 	display: flex;
-	padding: 16px;
 	align-items: center;
-	background-color: white;
+	background-color: var(--white);
 	position: relative;
+    padding-right: 16px;
+    padding-left: 16px;
 }
 
 .dark header {
-	background: #2b2c37;
+	background: var(--dark-grey);
 }
 
 .board-name-container {
@@ -29,18 +28,6 @@ header {
 
 .add-task-btn {
 	margin-right: 16px;
-	background: #635fc7;
-	color: white;
-	border-radius: 24px;
-	padding: 10px 18px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
-}
-
-.add-task-btn:hover {
-	background: #a8a4ff;
 }
 
 .ellipsis-btn {
@@ -48,23 +35,23 @@ header {
 	cursor: pointer;
 }
 
-@media screen and (minwidth: 768px) {
+@media only screen and (min-width: 768px) {
 	.logo-container {
+        height: 100%;
 		display: flex;
 		align-items: center;
 		gap: 15px;
 		width: calc(261px - 16px);
 		padding-left: 10px;
+		border-right: 1px solid var(--lines-light);
 	}
-
     
-
 	.header-name-container {
 		margin-left: 24px;
 	}
 
-    .elipsis-btn {
-        height: 20px;
-        width: 5px;
-      }
+	.elipsis-btn {
+		height: 20px;
+		width: 5px;
+	}
 }
