--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -17,42 +17,22 @@
 	align-items: center;
 }
 
-.board-selector-container {
+.sidebar-item-container {
 	display: flex;
 	flex-direction: column;
 	padding-right: 24px;
 }
 
-.board-selector {
+.sidebar-item {
 	height: 3rem;
 	cursor: pointer;
 }
 
-.board-selector:hover:not(.selected) {
+.sidebar-item:hover:not(.selected) {
 	background-color: rgba(99, 95, 199, 0.063);
 	color: var(--main-purple);
 	border-top-right-radius: 100px;
 	border-bottom-right-radius: 100px;
-}
-
-.selector-content-container {
-	margin-left: 24px;
-	height: 100%;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	gap: 12px;
-}
-
-.icon {
-	fill: var(--medium-grey);
-}
-
-.icon-add {
-	fill: var(--main-purple);
-}
-.board-selector:hover .icon {
-	fill: var(--main-purple);
 }
 
 .selected {
@@ -62,7 +42,32 @@
 	border-bottom-right-radius: 100px;
 }
 
-.board-selector.selected .icon {
+.item-content {
+	margin-left: 24px;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 12px;
+}
+
+.purple-text .item-label {
+	color: var(--main-purple);
+}
+
+.icon {
+	fill: var(--medium-grey);
+}
+
+.icon-add {
+	fill: var(--main-purple);
+}
+
+.sidebar-item:hover .icon {
+	fill: var(--main-purple);
+}
+
+.sidebar-item.selected .icon {
 	fill: var(--white);
 }
 
@@ -77,7 +82,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding-bottom: 8px;
+	padding-bottom: 1.5rem;
 }
 
 .theme-switch {
@@ -156,8 +161,4 @@ input:checked + .slider:before {
 
 .slider.round:before {
 	border-radius: 50%;
-}
-
-.hide-sidebar-container {
-	padding-top: 8px;
 }
