--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,9 +7,10 @@
 
 .content-container {
 	width: 100%;
-	height: 100%;
-  display: flex;
-  flex-direction: row;
+	flex: 1; 
+	display: flex;
+	flex-direction: row;
+	overflow: hidden; 
 }
 
 .btn {
