--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,5 +1,6 @@
 .sidebar-container {
 	width: 261px;
+	min-width: 261px; 
 	background-color: var(--white);
 	border-right: 1px solid var(--lines-light);
 	display: grid;
@@ -137,8 +138,8 @@
 .switch {
 	position: relative;
 	display: inline-block;
-	width: 60px;
-	height: 34px;
+	width: 40px;
+	height: 20px;
 }
 
 /* Hide default HTML checkbox */
@@ -164,10 +165,10 @@
 .slider:before {
 	position: absolute;
 	content: "";
-	height: 26px;
-	width: 26px;
+	height: 14px;
+	width: 14px;
 	left: 4px;
-	bottom: 4px;
+	bottom: 3px;
 	background-color: var(--white);
 	-webkit-transition: 0.4s;
 	transition: 0.4s;
@@ -182,9 +183,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-	-webkit-transform: translateX(26px);
-	-ms-transform: translateX(26px);
-	transform: translateX(26px);
+	-webkit-transform: translateX(18px);
+	-ms-transform: translateX(18px);
+	transform: translateX(18px);
 }
 
 .theme-switch:hover .slider {
@@ -193,7 +194,7 @@ input:checked + .slider:before {
 
 /* Rounded sliders */
 .slider.round {
-	border-radius: 34px;
+	border-radius: 12px;
 }
 
 .slider.round:before {
