--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,12 +7,14 @@
   --lines-dark: #3E3F4E;
   --medium-grey: #828FA3;
   --lines-light: #E4EBFA;
+  --new-column-light: #E9EFFA;
   --light-grey: #F4F7FD;
   --white: #FFFFFF;
   --main-purple: #635FC7;
   --purple-hover: #A8A4FF;
   --red: #EA5555;
   --red-hover: #FF9898;
+  --task-shadow: 54, 78, 126;
 
   text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
