--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -18,6 +18,23 @@ header {
 	background: var(--dark-grey);
 }
 
+header .elipse-menu-container {
+	width: 12rem;
+	height: 5.875rem;
+	background-color: var(--white);
+	border-radius: 8px;
+	box-shadow: 0px 4px 6px rgba(var(--task-shadow), 0.1015);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	padding-left: 1rem;
+	position: absolute;
+	top: 90%;
+	right: 2%;
+	cursor: pointer;
+}
+
+
 .logo-container{
 	padding-left: 1rem;
 }
@@ -34,10 +51,25 @@ header {
 	margin-right: 16px;
 }
 
-.ellipsis-btn {
+.elipsis-container{
+	height: 32px;
+	width: 32px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.elipsis-container:hover{
+	background-color: var(--light-grey);
+	border-radius: 50%;
+}
+
+
+.elipsis-btn {
 	height: 16px;
 	cursor: pointer;
 }
+
 
 @media only screen and (min-width: 768px) {
 	.logo-container {
@@ -53,6 +85,10 @@ header {
 		margin-left: 24px;
 	}
 
+	.elipsis-container{
+		height: 37px;
+		width: 37px;
+	}
 	.elipsis-btn {
 		height: 20px;
 		width: 5px;
