--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,3 +61,20 @@ body {
   align-items: center;
   z-index: 1000; 
 }
+
+.modal-card {
+  background: var(--white);
+  padding: 2rem;
+  border-radius: 8px;
+  max-width: 21.5rem;
+  width: 90%;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1001;
+  margin: 24px;
+}
+
+@media (min-width: 768px) {
+  .modal-card {
+    max-width: 30rem;
+  }
+}
