--- a/src/styles/AddEditTask.css
+++ b/src/styles/AddEditTask.css
@@ -1,13 +1,14 @@
-.modal-title-container{
+.modal-title-container {
     padding-bottom: 1.5rem;
 }
+
 .input-container {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
 }
 
-.input-item{
+.input-item {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -15,33 +16,33 @@
 
 .input-field {
     border-radius: 4px;
-    border: 1px solid rgba(0,0,0, .25);
+    border: 1px solid rgba(0, 0, 0, .25);
     height: 2.5rem;
     width: 100%;
     padding: 8px 25px 8px 16px;
     background-color: var(--white);
 }
 
-.input-field:focus{
+.input-field:focus {
     outline: none;
     border: 1px solid var(--main-purple);
 }
 
-.input-field:hover{
+.input-field:hover {
     border: 1px solid var(--main-purple);
 }
 
-.text-area{
+.text-area {
     height: 7rem;
 }
 
-.subtask-form-container{
+.subtask-form-container {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.subtask-input-item{
+.subtask-input-item {
     display: grid;
     grid-template-columns: 1fr 15px;
     gap: 1rem;
@@ -49,15 +50,15 @@
     padding-bottom: 0.75rem;
 }
 
-.icon-subtask-delete{
+.icon-subtask-delete {
     cursor: pointer;
 }
 
-.icon-subtask-delete:hover{
-    color: var(--red);
+.icon-subtask-delete:hover {
+    fill: var(--red);
 }
 
-.add-subtask-btn{
+.add-subtask-btn {
     width: 100%;
     height: 2.5rem;
     border-radius: 24px;
@@ -70,10 +71,10 @@
     background-color: rgba(99, 95, 199, .1015);
 }
 
-.add-subtask-btn:hover{
+.add-subtask-btn:hover {
     background-color: rgba(99, 95, 199, .25);
 }
 
-.submit-btn{
+.submit-btn {
     height: 2.5rem;
 }
