--- a/src/styles/AddEditForm.css
+++ b/src/styles/AddEditForm.css
@@ -1,3 +1,4 @@
+/* AddEditForm.css */
 .modal-title-container {
     padding-bottom: 1.5rem;
 }
@@ -36,29 +37,34 @@
     height: 7rem;
 }
 
-.subtask-form-container {
+.list-form-container {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.subtask-input-item {
+.list-input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+
+.list-input-item {
     display: grid;
     grid-template-columns: 1fr 15px;
     gap: 1rem;
     align-items: center;
-    padding-bottom: 0.75rem;
 }
 
-.icon-subtask-delete {
+.icon-list-delete {
     cursor: pointer;
 }
 
-.icon-subtask-delete:hover {
+.icon-list-delete:hover {
     fill: var(--red);
 }
 
-.add-subtask-btn {
+.add-list-item-btn {
     width: 100%;
     height: 2.5rem;
     border-radius: 24px;
@@ -71,7 +77,7 @@
     background-color: rgba(99, 95, 199, .1015);
 }
 
-.add-subtask-btn:hover {
+.add-list-item-btn:hover {
     background-color: rgba(99, 95, 199, .25);
 }
 
