--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -68,9 +68,10 @@ body {
   border-radius: 8px;
   max-width: 21.5rem;
   width: 90%;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1001;
   margin: 24px;
+  position: relative;
 }
 
 @media (min-width: 768px) {
