--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -34,6 +34,32 @@ header {
 	margin-right: 16px;
 }
 
+.dropdown-modal-overlay {
+	position: fixed;
+	top: 5rem;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: start;
+	z-index: 1000;
+}
+
+
+.board-menu-card{
+	background: var(--white);
+	border-radius: 8px;
+	width: 70%;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	z-index: 1001;
+	margin: 24px;
+	display: grid;
+	gap: 1rem;
+	grid-template-rows: 3rem 1fr 3rem;
+}
+
 @media only screen and (min-width: 768px) {
 	.logo-container {
         height: 100%;
