--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,81 +1,84 @@
 
 :root {
-  /*color variables*/
-  --black: #000112;
-  --very-dark-grey: #20212C;
-  --dark-grey: #2B2C37;
-  --lines-dark: #3E3F4E;
-  --medium-grey: #828FA3;
-  --lines-light: #E4EBFA;
-  --new-column-light: #E9EFFA;
-  --light-grey: #F4F7FD;
-  --white: #FFFFFF;
-  --main-purple: #635FC7;
-  --purple-hover: #A8A4FF;
-  --red: #EA5555;
-  --red-hover: #FF9898;
-  --task-shadow: 54, 78, 126;
+    /*color variables*/
+    --black: #000112;
+    --very-dark-grey: #20212C;
+    --dark-grey: #2B2C37;
+    --lines-dark: #3E3F4E;
+    --medium-grey: #828FA3;
+    --lines-light: #E4EBFA;
+    --new-column-light: #E9EFFA;
+    --light-grey: #F4F7FD;
+    --white: #FFFFFF;
+    --main-purple: #635FC7;
+    --purple-hover: #A8A4FF;
+    --red: #EA5555;
+    --red-hover: #FF9898;
+    --task-shadow: 54, 78, 126;
 
-  text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 html,
 body {
-  min-height: 100vh;
-  max-width: 100%;
-	width: 100%;
-	height: 100vh;
+    min-height: 100%;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
 }
 
 body {
-  margin: 0;
-  font-family: "Plus Jakarta Sans", sans-serif;
+    margin: 0;
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  border: none;
-  box-sizing: border-box;
-  font-family: "Plus Jakarta Sans", sans-serif;
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-sizing: border-box;
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
 
-#root{
-  background-color: var(--light-grey);
-  max-width: 100%;
-  width: 100%;
-  height: 100%;
+#root {
+    background-color: var(--light-grey);
+    max-width: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    overflow-y: auto;
 }
 
 .modal-card {
-  background: var(--white);
-  padding: 2rem;
-  border-radius: 8px;
-  max-width: 21.5rem;
-  width: 90%;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 1001;
-  margin: 24px;
-  position: relative;
+    background: var(--white);
+    padding: 2rem;
+    border-radius: 8px;
+    max-width: 21.5rem;
+    width: 90%;
+    max-height: 90vh;
+    overflow-y: auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1001;
+    margin: 24px;
+    position: relative;
 }
 
 @media (min-width: 768px) {
-  .modal-card {
-    max-width: 30rem;
-  }
+    .modal-card {
+        max-width: 30rem;
+    }
 }
