--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -74,11 +74,11 @@ header {
 		margin-left: 24px;
 	}
 
-	.elipsis-container{
+	.ellipsis-container{
 		height: 37px;
 		width: 37px;
 	}
-	.elipsis-btn {
+	.ellipsis-btn {
 		height: 20px;
 		width: 5px;
 	}
