--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -31,7 +31,7 @@
 }
 
 .column-name{
-    color: var(--medium-grey);
+    color: var(--color-secondary);
 }
 
 .add-column-btn{
@@ -45,20 +45,21 @@
     justify-content: center;
     align-items: center;
     background-color: var(--new-column-light);
-    color: var(--medium-grey);
+    color: var(--color-secondary);
     border-radius: 6px;
     margin-top: 35px;
     margin-right: 24px;
 }
 
 .add-column-btn:hover{
-    color: var(--main-purple);
+    color: var(--color-primary);
 }
 
 .task-card{
     width: 17.5rem;
     height: auto;
-    background-color: var(--white);
+    background-color: var(--color-background-secondary);
+    color: var(--color-text);
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(var(--task-shadow), .1015);
     display: flex;
@@ -70,9 +71,9 @@
 }
 
 .task-card:hover h3{
-    color: var(--main-purple);
+    color: var(--color-primary);
 }
 
 .sub-task-count{
-    color: var(--medium-grey);
+    color: var(--color-secondary);
 }
