--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,46 +1,53 @@
 .app-container {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .content-container {
-	width: 100%;
-	flex: 1; 
-	display: flex;
-	flex-direction: row;
-	overflow: hidden; 
+    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+.content-container .boards-container,
+.content-container .empty-board-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .btn {
-	background: var(--color-primary);
-	color: var(--white);
-	border-radius: 24px;
-	padding: 10px 18px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
+    background: var(--color-primary);
+    color: var(--white);
+    border-radius: 24px;
+    padding: 10px 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
 .btn:hover {
-	background: var(--purple-hover);
+    background: var(--purple-hover);
 }
 
-.btn-red{
-	background-color: var(--color-accent);
+.btn-red {
+    background-color: var(--color-accent);
 }
 
-.btn-red:hover{
-	background-color: var(--red-hover);
+.btn-red:hover {
+    background-color: var(--red-hover);
 }
 
-.btn-grey{
-	background-color: rgba(var(--task-shadow), 0.1);
-	color: var(--color-primary);
+.btn-grey {
+    background-color: rgba(var(--task-shadow), 0.1);
+    color: var(--color-primary);
 }
 
-.btn-grey:hover{
-	background-color: rgba(var(--task-shadow), 0.25);
+.btn-grey:hover {
+    background-color: rgba(var(--task-shadow), 0.25);
 }
