--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -1,4 +1,11 @@
+.boards-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
 .board-container{
+    flex: 1;
     display: flex;
     gap: 24px;
     width: 100%;
