--- a/src/styles/EmptyBoard.css
+++ b/src/styles/EmptyBoard.css
@@ -5,6 +5,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1;
+    flex-direction: column;
 }
 
 .empty-board-content{
